--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 #开发模式下 devtools 重启触发文件 在运行中修改其他文件 需要重启时修改本文件 触发重启
 spring.devtools.restart.trigger-file=restart_trigger
+# 打印debug日志
+debug=false
+#logging.path=logs/
+#logging.level.root=INFO
+#logging.level.test.springboot.hello=DEBUG
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+# 测试properties files https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#boot-features-external-config
+name=liyiming
+#boot-features-external-config-random-values
+#my.secret=${random.value}
+my.number=${random.int}
+my.bignumber=${random.long}
+my.uuid=${random.uuid}
+my.number.less.than.ten=${random.int(10)}
+my.number.in.range=${random.int[1024,65536]}
