阅读进度https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#boot-features-caching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ my.bignumber=${random.long}
 my.uuid=${random.uuid}
 my.number.less.than.ten=${random.int(10)}
 my.number.in.range=${random.int[1024,65536]}
+#server.port
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://114.215.130.178:3306/test
+spring.datasource.username=root
+spring.datasource.password=WnTxp2096d
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
